<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="32dp">

    <!-- Length -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"/>

    <EditText
        android:id="@+id/edt_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_length"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:labelFor="@id/edt_length"
        android:lines="1"
        android:minHeight="48dp" />

    <!-- Width -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/width"/>

    <EditText
        android:id="@+id/edt_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_width"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp" />

    <!-- Height -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"/>

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_height"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp" />

    <!-- Button -->
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <!-- Result -->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"/>

</LinearLayout>